tests/sema/golden/23_use_before_decl.out
tests/sema/bad/23_use_before_decl.sg:2:15: error: unknown identifier 'x'
    let y:int = x;
                ^
